--- a/options.html
+++ b/options.html
@@ -5,7 +5,7 @@
   <title>AutoApply Pro - Settings</title>
 
   <!-- Tailwind CDN -->
-  <script src="https://cdn.tailwindcss.com"></script>
+ <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 
 <body class="bg-gray-100 min-h-screen p-6 font-sans">
